# uiinspector

./: CMakeLists.txt  README.md  uiinspector.json.in  uiinspectorinjectemanager.cpp  uiinspectorinjectemanager.h  uiinspectormode.cpp  uiinspectormode.h  uiinspectoroptionspage.cpp  uiinspectoroptionspage.h  uiinspectorplugin.cpp  uiinspectorplugin.h  uiinspectorsettings.cpp  uiinspectorsettings.h
gammaray/: .tag  CMakeLists.txt  README-EMBEDDING-QTCREATOR.md  REUSE.toml  cmake_install.cmake  config-gammaray-version.h  config-gammaray.h
gammaray/common/: CMakeLists.txt  classesiconsindex_data.cpp  paths.cpp
gammaray/common/tools/widgetinspector/: widgetinspectorclient.cpp  widgetinspectorclient.h  widgetinspectorinterface.h  widgetinspectorwidget.cpp
gammaray/host/: CMakeLists.txt  client.cpp  client.h  clientconnectionmanager.cpp  clientconnectionmanager.h  gammaray_client_export.h  localserverdevice.cpp  localserverdevice.h  server.cpp  serverdevice.cpp  serverdevice.h
gammaray/plugins/: CMakeLists.txt
gammaray/plugins/widgetinspector/: CMakeLists.txt  widgetinspectorwidget.h
gammaray/scripts/: cleanup-empty-dirs.ps1
gammaray/ui/: CMakeLists.txt  clienttoolmanager.cpp  clientview.cpp  clientview.h  mainwindow.cpp  mainwindow.ui
gammaray/ui/resources/: CMakeLists.txt
gammaray/ui/tools/guisupport/: guisupportuifactory.h
gammaray/ui/tools/widgetinspector/: widgetinspectorinterface.cpp  widgetinspectorinterface.h  widgetinspectorwidget.cpp  widgetinspectorwidget.h
gammaray/ui/tools/widgetinspector/waextension/: widgetattributetab.cpp  widgetattributetab.h  widgetattributetab.ui
icons/: uiinspector.qrc
injector/: basicwindllinjector.cpp  basicwindllinjector.h
